Corrected too large fontSize on some screens; changed progress bar background color and color transition points

--- a/source/App.css
+++ b/source/App.css
@@ -15,7 +15,7 @@ body {
 }
 
 .app-progress-black {
-	background: black;
+	background: #333;
 	margin: 6px;
 	height: 16px;
 }
